--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "tailwindcss": "4.0.0-alpha.13",
     "typescript": "5.3.3",
     "@notionhq/client": "^2.2.15",
-    "dotenv": "^16.4.5"
+    "dotenv": "^16.4.5",
+    "notion-to-md": "^3.1.1",
+    "react-markdown": "^9.0.1"
   }
 }
